--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -87,7 +87,7 @@ KeyStore=
 KeyAlias=
 KeyStorePassword=
 KeyPassword=
-bBuildForArmV7=True
+bBuildForArmV7=False
 bBuildForX86=False
 bBuildForX8664=False
 bBuildForES2=True
@@ -104,7 +104,7 @@ bMultiTargetFormat_DXT=True
 bMultiTargetFormat_PVRTC=True
 bMultiTargetFormat_ATC=True
 bMultiTargetFormat_ASTC=True
-bBuildForArm64=False
+bBuildForArm64=True
 bEnableGradle=False
 
 [Core.Log]
