Reorganising. Defaulting to ARMv7, because that seems to be the default unreal wants to use.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -87,7 +87,7 @@ KeyStore=
 KeyAlias=
 KeyStorePassword=
 KeyPassword=
-bBuildForArmV7=False
+bBuildForArmV7=True
 bBuildForX86=False
 bBuildForX8664=False
 bBuildForES2=True
