--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -110,6 +110,12 @@ bEnableGradle=False
 [Core.Log]
 ;LogHttp=Verbose
 
+;linux build
+[/Script/LinuxTargetPlatform.LinuxTargetSettings]
+;TargetArchitecture=X86_64UnknownLinuxGnu
+;TargetArchitecture=ArmUnknownLinuxGnueabihf 
+;TargetArchitecture=AArch64UnknownLinuxGnueabi
+
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 bSupportsPortraitOrientation=False
 bSupportsUpsideDownOrientation=False
@@ -123,7 +129,6 @@ DefaultFluidFriction=0.300000
 SimulateScratchMemorySize=262144
 RagdollAggregateThreshold=4
 TriangleMeshTriangleMinAreaThreshold=5.000000
-bEnableAsyncScene=False
 bEnableShapeSharing=False
 bEnablePCM=True
 bEnableStabilization=False
@@ -156,7 +161,8 @@ bSubsteppingAsync=False
 MaxSubstepDeltaTime=0.016667
 MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
-AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+
+
