ItemCatalog and UserInventoryManagement

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -240,6 +240,8 @@ add_library(brainCloud STATIC
     include/braincloud/BrainCloudSteam.h
     include/braincloud/BrainCloudTime.h
     include/braincloud/BrainCloudTournament.h
+    include/braincloud/BrainCloudItemCatalog.h
+    include/braincloud/BrainCloudUserInventoryManagement.h
     include/braincloud/BrainCloudTypes.h
     include/braincloud/BrainCloudVirtualCurrency.h
     include/braincloud/BrainCloudWrapper.h
@@ -319,6 +321,8 @@ add_library(brainCloud STATIC
     src/BrainCloudSteam.cpp
     src/BrainCloudTime.cpp
     src/BrainCloudTournament.cpp
+    src/BrainCloudItemCatalog.cpp
+    src/BrainCloudUserInventoryManagement.cpp
     src/BrainCloudVirtualCurrency.cpp
     src/BrainCloudWrapper.cpp
     src/FriendPlatform.cpp
