customEntity, DataStream, userItems rework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -240,6 +240,7 @@ add_library(brainCloud STATIC
     include/braincloud/BrainCloudSteam.h
     include/braincloud/BrainCloudTime.h
     include/braincloud/BrainCloudTournament.h
+    include/braincloud/BrainCloudCustomEntity.h
     include/braincloud/BrainCloudItemCatalog.h
     include/braincloud/BrainCloudUserItems.h
     include/braincloud/BrainCloudTypes.h
@@ -321,6 +322,7 @@ add_library(brainCloud STATIC
     src/BrainCloudSteam.cpp
     src/BrainCloudTime.cpp
     src/BrainCloudTournament.cpp
+    src/BrainCloudCustomEntity.cpp
     src/BrainCloudItemCatalog.cpp
     src/BrainCloudUserItems.cpp
     src/BrainCloudVirtualCurrency.cpp
