--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -91,7 +91,7 @@ bBuildForArmV7=True
 bBuildForX86=False
 bBuildForX8664=False
 bBuildForES2=True
-bBuildForES31=False 
+bBuildForES31=True
 bEnableGooglePlaySupport=False
 GamesAppID=
 AdMobAdUnitID=
@@ -164,5 +164,4 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
 
