--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,6 +114,8 @@ if (USE_LIBWEBSOCKETS OR ANDROID)
 endif()
 if (WIN32)
     list(APPEND OS_SPECIFIC_SRCS "src/win/Win32TCPSocket.cpp")
+    list(APPEND OS_SPECIFIC_SRCS "src/win/Win32RelayTCPSocket.cpp")
+    list(APPEND OS_SPECIFIC_SRCS "src/win/Win32RelayUDPSocket.cpp")
     if (UWP)
         list(APPEND OS_SPECIFIC_INCS
             "include/braincloud/internal/win/UWPWebSocket.h")
@@ -121,6 +123,8 @@ if (WIN32)
     endif()
 else()
     list(APPEND OS_SPECIFIC_SRCS "src/DefaultTCPSocket.cpp")
+    list(APPEND OS_SPECIFIC_SRCS "src/DefaultRelayTCPSocket.cpp")
+    list(APPEND OS_SPECIFIC_SRCS "src/DefaultRelayUDPSocket.cpp")
 endif()
 
 # Guid
@@ -215,6 +219,7 @@ add_library(brainCloud STATIC
     include/braincloud/BrainCloudProfanity.h
     include/braincloud/BrainCloudPushNotification.h
     include/braincloud/BrainCloudRedemptionCode.h
+    include/braincloud/BrainCloudRelay.h
     include/braincloud/BrainCloudRTT.h
     include/braincloud/BrainCloudS3Handling.h
     include/braincloud/BrainCloudScript.h
@@ -251,8 +256,13 @@ add_library(brainCloud STATIC
     include/braincloud/internal/IFileUploader.h
     include/braincloud/internal/IPinger.h
     include/braincloud/internal/ITCPSocket.h
+    include/braincloud/internal/IRelayUDPSocket.h
+    include/braincloud/internal/IRelayTCPSocket.h
+    include/braincloud/internal/DefaultRelayUDPSocket.h
+    include/braincloud/internal/DefaultRelayTCPSocket.h
     include/braincloud/internal/DefaultBrainCloudComms.h
     include/braincloud/internal/JsonUtil.h
+    include/braincloud/internal/RelayComms.h
     include/braincloud/internal/RTTComms.h
     include/braincloud/internal/SaveDataHelper.h
     include/braincloud/internal/StringUtil.h
@@ -300,6 +310,7 @@ add_library(brainCloud STATIC
     src/BrainCloudProfanity.cpp
     src/BrainCloudPushNotification.cpp
     src/BrainCloudRedemptionCode.cpp
+    src/BrainCloudRelay.cpp
     src/BrainCloudRTT.cpp
     src/BrainCloudS3Handling.cpp
     src/BrainCloudScript.cpp
@@ -319,6 +330,7 @@ add_library(brainCloud STATIC
     src/JsonUtil.cpp
     src/OperationParam.cpp
     src/Platform.cpp
+    src/RelayComms.cpp
     src/RTTComms.cpp
     src/SaveDataHelper.cpp
     src/ServerCall.cpp
