--- a/Plugins/BCClient/BCClient.uplugin
+++ b/Plugins/BCClient/BCClient.uplugin
@@ -23,7 +23,7 @@
     },
     {
       "Name": "BCBlueprintSupport",
-      "Type": "Editor",
+      "Type": "UncookedOnly",
       "LoadingPhase": "PreDefault"
     },
     {
