Warning Fix with "Editor Only" for braincloud related blueprint nodes
A warning from all braincloud related nodes in blueprint would state that they are "Editor Only module, but is placed in a runtime blueprint! K2 Nodes should only be defined in a Developer or UncookedOnly module."

Changing the type within BCClient.uplugin from Editor to Runtime removes this warning.

--- a/Plugins/BCClient/BCClient.uplugin
+++ b/Plugins/BCClient/BCClient.uplugin
@@ -23,7 +23,7 @@
     },
     {
       "Name": "BCBlueprintSupport",
-      "Type": "Editor",
+      "Type": "Runtime",
       "LoadingPhase": "PreDefault"
     },
     {
