Had to revert BCBlueprintSupport to be Editor instead of Runtime
- This is due to Editor Modules not being able to be packaged into platforms like windows or android.
- Changes to umap's and uassets are old tests that needed updated nodes from braincloud, nodes got disconnected somehow

--- a/Plugins/BCClient/BCClient.uplugin
+++ b/Plugins/BCClient/BCClient.uplugin
@@ -23,7 +23,7 @@
     },
     {
       "Name": "BCBlueprintSupport",
-      "Type": "Runtime",
+      "Type": "Editor",
       "LoadingPhase": "PreDefault"
     },
     {
