Android testing environment set up + old level blueprints fixed for packaging process

--- a/BCSubsystem.uproject
+++ b/BCSubsystem.uproject
@@ -14,6 +14,10 @@
 		{
 			"Name": "BCClient",
 			"Enabled": true
+		},
+		{
+			"Name": "AndroidDeviceProfileSelector",
+			"Enabled": false
 		}
 	]
 }
