--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -65,15 +65,15 @@ AppliedDefaultGraphicsPerformance=Scalable
 n.VerifyPeer=False
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-PackageName=com.YourCompany.[PROJECT]
+PackageName=com.bitheads.braincloud
 StoreVersion=1
 ApplicationDisplayName=
 VersionDisplayName=1.0
-MinSDKVersion=9
-TargetSDKVersion=9
-bPackageDataInsideApk=False
-bDisableVerifyOBBOnStartUp=False
-Orientation=Landscape
+MinSDKVersion=27
+TargetSDKVersion=29
+bPackageDataInsideApk=True
+bDisableVerifyOBBOnStartUp=True
+Orientation=FullSensor
 bFullScreen=False
 DepthBufferPreference=Default
 ExtraApplicationSettings=
@@ -104,8 +104,13 @@ bMultiTargetFormat_DXT=True
 bMultiTargetFormat_PVRTC=True
 bMultiTargetFormat_ATC=True
 bMultiTargetFormat_ASTC=True
-bBuildForArm64=False
-bEnableGradle=False
+bBuildForArm64=True
+bEnableGradle=True
+bAllowControllers=False
+bSupportAdMob=False
+bForceSmallOBBFiles=True
+bUseDisplayCutout=True
+bEnableNewKeyboard=False
 
 [Core.Log]
 ;LogHttp=Verbose
@@ -164,4 +169,7 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+
+[/Script/EngineSettings.GameMapsSettings]
+GameDefaultMap=/Game/AndroidTest.AndroidTest
 
