--- a/Plugins/BCClient/BCClient.uplugin
+++ b/Plugins/BCClient/BCClient.uplugin
@@ -7,7 +7,7 @@
   "Category": "Network",
   "CreatedBy": "bitHeads Inc.",
   "CreatedByURL": "http://getbraincloud.com",
-  "DocsURL": "http://apidocs.braincloudservers.com/",
+  "DocsURL": "http://getbraincloud.com/apidocs/",
   "MarketplaceURL": "",
   "SupportURL": "http://getbraincloud.com/apidocs/support/",
   "EngineVersion": "4.27.0",
