--- a/.gitmodules
+++ b/.gitmodules
@@ -2,7 +2,7 @@
 	path = Plugins/VaRest
 	url = https://github.com/ufna/VaRest.git
 	branch = 4.27
-[submodule "Plugins/BCClient"]
+[submodule "BCClient"]
 	path = Plugins/BCClient
 	url = git@github.com:getbraincloud/braincloud-unreal-plugin-src.git
 	branch = develop
