--- a/.gitmodules
+++ b/.gitmodules
@@ -2,6 +2,7 @@
 	path = Plugins/VaRest
 	url = https://github.com/ufna/VaRest.git
 	branch = 4.27
-[submodule "Plugins/BCClient"]
-	path = Plugins/BCClient
+[submodule "Plugins/BrainCloud"]
+	path = Plugins/BrainCloud
 	url = https://github.com/getbraincloud/braincloud-unreal-plugin-src.git
+	branch = master
