initializing with client version

--- a/BCSubsystem.uproject
+++ b/BCSubsystem.uproject
@@ -69,6 +69,18 @@
 				"Android",
 				"HoloLens"
 			]
+		},
+		{
+			"Name": "EditorTests",
+			"Enabled": true
+		},
+		{
+			"Name": "FunctionalTestingEditor",
+			"Enabled": true
+		},
+		{
+			"Name": "RuntimeTests",
+			"Enabled": true
 		}
 	]
 }
