--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,4 +1,5 @@
 [URL]
+
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
 DefaultCursor=None
@@ -116,6 +117,7 @@ bEnableNewKeyboard=False
 ;LogHttp=Verbose
 
 ;linux build
+
 [/Script/LinuxTargetPlatform.LinuxTargetSettings]
 ;TargetArchitecture=X86_64UnknownLinuxGnu
 ;TargetArchitecture=ArmUnknownLinuxGnueabihf 
@@ -126,6 +128,9 @@ bSupportsPortraitOrientation=False
 bSupportsUpsideDownOrientation=False
 bSupportsLandscapeLeftOrientation=True
 PreferredLandscapeOrientation=LandscapeLeft
+BundleIdentifier=com.siliconhanna.[PROJECT_NAME]
+MobileProvision=UE4_b994cd0a-6963-45fc-99c5-d88551f86d8a.mobileprovision
+SigningCertificate=iPhone Developer: Joanne Hoar (4A7VM6BTMS)
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -172,4 +177,9 @@ DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/AndroidTest.AndroidTest
+EditorStartupMap=/Game/Maps/FlatMap.FlatMap
+
+[/Script/VaRest.VaRestSettings]
+bExtendedLog=False
+bUseChunkedParser=False
 
