Runs on device with test output

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -177,7 +177,7 @@ DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/AndroidTest.AndroidTest
-EditorStartupMap=/Game/Maps/FlatMap.FlatMap
+EditorStartupMap=/Game/AndroidTest.AndroidTest
 
 [/Script/VaRest.VaRestSettings]
 bExtendedLog=False
