update modules an ini files for merging to develop branch

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -128,9 +128,9 @@ bSupportsPortraitOrientation=False
 bSupportsUpsideDownOrientation=False
 bSupportsLandscapeLeftOrientation=True
 PreferredLandscapeOrientation=LandscapeLeft
-BundleIdentifier=com.siliconhanna.[PROJECT_NAME]
-MobileProvision=UE4_b994cd0a-6963-45fc-99c5-d88551f86d8a.mobileprovision
-SigningCertificate=iPhone Developer: Joanne Hoar (4A7VM6BTMS)
+BundleIdentifier=com.bitheads.[PROJECT_NAME]
+MobileProvision=
+SigningCertificate=
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
