--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -176,8 +176,9 @@ PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/AndroidTest.AndroidTest
+GameDefaultMap=/Game/EmptyWorld.EmptyWorld
 EditorStartupMap=/Game/AndroidTest.AndroidTest
+GlobalDefaultGameMode=/Script/FunctionalTesting.FunctionalTestGameMode
 
 [/Script/VaRest.VaRestSettings]
 bExtendedLog=False
