--- a/.gitmodules
+++ b/.gitmodules
@@ -4,5 +4,5 @@
 	branch = 4.27
 [submodule "Plugins/BCClient"]
 	path = Plugins/BCClient
-	url = https://getbraincloud/braincloud-unreal-plugin-src.git
+	url = https://github.com/getbraincloud/braincloud-unreal-plugin-src.git
 	branch = develop
