Fall back on environment variables for app id and keys

--- a/Config/BrainCloudConfig.ini
+++ b/Config/BrainCloudConfig.ini
@@ -1,7 +1,7 @@
 [BrainCloud.Client]
 ServerURL = "https://internal.braincloudservers.com/dispatcherv2"
-Secret = 4e51b45c-030e-4f21-8457-dc53c9a0ed5f
-AppID = 20001
+Secret = 0
+AppID = 0
 Version = 1.0.0
  
 [BrainCloud.Auth]
