update hash and rename submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,7 +2,7 @@
 	path = Plugins/VaRest
 	url = https://github.com/ufna/VaRest.git
 	branch = 4.27
-[submodule "Plugins/BrainCloud"]
-	path = Plugins/BrainCloud
+[submodule "Plugins/BCClient"]
+	path = Plugins/BCClient
 	url = https://github.com/getbraincloud/braincloud-unreal-plugin-src.git
 	branch = master
