--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,4 +1,5 @@
 [URL]
+
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
 DefaultCursor=None
@@ -116,6 +117,7 @@ bEnableNewKeyboard=False
 ;LogHttp=Verbose
 
 ;linux build
+
 [/Script/LinuxTargetPlatform.LinuxTargetSettings]
 ;TargetArchitecture=X86_64UnknownLinuxGnu
 ;TargetArchitecture=ArmUnknownLinuxGnueabihf 
@@ -126,6 +128,9 @@ bSupportsPortraitOrientation=False
 bSupportsUpsideDownOrientation=False
 bSupportsLandscapeLeftOrientation=True
 PreferredLandscapeOrientation=LandscapeLeft
+BundleIdentifier=com.bitheads.[PROJECT_NAME]
+MobileProvision=
+SigningCertificate=
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -171,5 +176,11 @@ PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/AndroidTest.AndroidTest
+GameDefaultMap=/Game/EmptyWorld.EmptyWorld
+EditorStartupMap=/Game/AndroidTest.AndroidTest
+GlobalDefaultGameMode=/Script/FunctionalTesting.FunctionalTestGameMode
+
+[/Script/VaRest.VaRestSettings]
+bExtendedLog=False
+bUseChunkedParser=False
 
