--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "Plugins/VaRest"]
 	path = Plugins/VaRest
 	url = https://github.com/ufna/VaRest.git
-	branch = 5.0
+	branch = develop
 [submodule "Plugins/BCClient"]
 	path = Plugins/BCClient
 	url = https://github.com/getbraincloud/braincloud-unreal-plugin-src.git
