--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -120,7 +120,7 @@ bEnableNewKeyboard=False
 
 [/Script/LinuxTargetPlatform.LinuxTargetSettings]
 ;TargetArchitecture=X86_64UnknownLinuxGnu
-;TargetArchitecture=ArmUnknownLinuxGnueabihf 
+;TargetArchitecture=ArmUnknownLinuxGnueabihf
 ;TargetArchitecture=AArch64UnknownLinuxGnueabi
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
@@ -183,4 +183,18 @@ GlobalDefaultGameMode=/Script/FunctionalTesting.FunctionalTestGameMode
 [/Script/VaRest.VaRestSettings]
 bExtendedLog=False
 bUseChunkedParser=False
+
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=412ED8E62A4D73CF22DA73BB2080D222
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
 
