Renamed AndroidTest to DeviceTest since it will work on all devices including consoles Improved logging in editor for testing

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -177,7 +177,7 @@ DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/EmptyWorld.EmptyWorld
-EditorStartupMap=/Game/AndroidTest.AndroidTest
+EditorStartupMap=/Game/DeviceTest.DeviceTest
 GlobalDefaultGameMode=/Script/FunctionalTesting.FunctionalTestGameMode
 
 [/Script/VaRest.VaRestSettings]
