Revert "Renamed AndroidTest to DeviceTest since it will work on all devices including consoles"
This reverts commit c190abf33f483ff95d019a795867892338fd7f62.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -177,7 +177,7 @@ DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/EmptyWorld.EmptyWorld
-EditorStartupMap=/Game/DeviceTest.DeviceTest
+EditorStartupMap=/Game/AndroidTest.AndroidTest
 GlobalDefaultGameMode=/Script/FunctionalTesting.FunctionalTestGameMode
 
 [/Script/VaRest.VaRestSettings]
