--- a/.gitmodules
+++ b/.gitmodules
@@ -5,5 +5,4 @@
 [submodule "Plugins/BCClient"]
 	path = Plugins/BCClient
 	url = https://github.com/getbraincloud/braincloud-unreal-plugin-src.git
-	branch = BCLOUD-3669
-	
+	branch = develop
