--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "Plugins/VaRest"]
 	path = Plugins/VaRest
 	url = https://github.com/ufna/VaRest.git
-	branch = develop
+	branch = 4.27
 [submodule "Plugins/BCClient"]
 	path = Plugins/BCClient
 	url = https://github.com/getbraincloud/braincloud-unreal-plugin-src.git
-	branch = release/4.13.1
+	branch=develop
