Adjustments to config + New testing class & map + VA Rest included

--- a/Config/Android/AndroidEngine.ini
+++ b/Config/Android/AndroidEngine.ini
@@ -15,3 +15,9 @@ DefaultPlatformService=BrainCloud
 [SlateRenderer]
 NumPreallocatedVertices=200
 
+[ForwardShadingQuality_GLSL_ES3_1_ANDROID ShaderPlatformQualitySettings]
+QualityOverrides[0]=(bDiscardQualityDuringCook=False,bEnableOverride=False,bForceFullyRough=False,bForceNonMetal=False,bForceDisableLMDirectionality=False,bForceLQReflections=False,bForceDisablePreintegratedGF=False,bDisableMaterialNormalCalculation=False,MobileShadowQuality=PCF_2x2)
+QualityOverrides[1]=(bDiscardQualityDuringCook=False,bEnableOverride=True,bForceFullyRough=False,bForceNonMetal=False,bForceDisableLMDirectionality=False,bForceLQReflections=False,bForceDisablePreintegratedGF=False,bDisableMaterialNormalCalculation=False,MobileShadowQuality=PCF_2x2)
+QualityOverrides[2]=(bDiscardQualityDuringCook=True,bEnableOverride=True,bForceFullyRough=True,bForceNonMetal=True,bForceDisableLMDirectionality=True,bForceLQReflections=True,bForceDisablePreintegratedGF=True,bDisableMaterialNormalCalculation=True,MobileShadowQuality=NoFiltering)
+QualityOverrides[3]=(bDiscardQualityDuringCook=False,bEnableOverride=False,bForceFullyRough=False,bForceNonMetal=False,bForceDisableLMDirectionality=False,bForceLQReflections=False,bForceDisablePreintegratedGF=False,bDisableMaterialNormalCalculation=False,MobileShadowQuality=PCF_2x2)
+
