--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -70,11 +70,11 @@ PackageName=com.bitheads.braincloud
 StoreVersion=1
 ApplicationDisplayName=
 VersionDisplayName=1.0
-MinSDKVersion=27
+MinSDKVersion=29
 TargetSDKVersion=29
 bPackageDataInsideApk=True
 bDisableVerifyOBBOnStartUp=True
-Orientation=FullSensor
+Orientation=Landscape
 bFullScreen=False
 DepthBufferPreference=Default
 ExtraApplicationSettings=
@@ -109,9 +109,10 @@ bBuildForArm64=True
 bEnableGradle=True
 bAllowControllers=False
 bSupportAdMob=False
-bForceSmallOBBFiles=True
+bForceSmallOBBFiles=False
 bUseDisplayCutout=True
 bEnableNewKeyboard=False
+bSupportsVulkan=False
 
 [Core.Log]
 ;LogHttp=Verbose
@@ -176,9 +177,10 @@ PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/EmptyWorld.EmptyWorld
-EditorStartupMap=/Game/AndroidTest.AndroidTest
+GameDefaultMap=/Game/AndroidSpecificTesting.AndroidSpecificTesting
+EditorStartupMap=/Game/AndroidSpecificTesting.AndroidSpecificTesting
 GlobalDefaultGameMode=/Script/FunctionalTesting.FunctionalTestGameMode
+GameInstanceClass=/Game/BC_GameInstance.BC_GameInstance_C
 
 [/Script/VaRest.VaRestSettings]
 bExtendedLog=False
@@ -197,4 +199,16 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[ForwardShadingQuality_SF_VULKAN_ES31_ANDROID ShaderPlatformQualitySettings]
+QualityOverrides[0]=(bDiscardQualityDuringCook=False,bEnableOverride=False,bForceFullyRough=False,bForceNonMetal=False,bForceDisableLMDirectionality=False,bForceLQReflections=False,bForceDisablePreintegratedGF=False,bDisableMaterialNormalCalculation=False,MobileShadowQuality=PCF_2x2)
+QualityOverrides[1]=(bDiscardQualityDuringCook=False,bEnableOverride=True,bForceFullyRough=False,bForceNonMetal=False,bForceDisableLMDirectionality=False,bForceLQReflections=False,bForceDisablePreintegratedGF=False,bDisableMaterialNormalCalculation=False,MobileShadowQuality=PCF_2x2)
+QualityOverrides[2]=(bDiscardQualityDuringCook=True,bEnableOverride=True,bForceFullyRough=True,bForceNonMetal=True,bForceDisableLMDirectionality=True,bForceLQReflections=True,bForceDisablePreintegratedGF=True,bDisableMaterialNormalCalculation=True,MobileShadowQuality=PCF_2x2)
+QualityOverrides[3]=(bDiscardQualityDuringCook=False,bEnableOverride=False,bForceFullyRough=False,bForceNonMetal=False,bForceDisableLMDirectionality=False,bForceLQReflections=False,bForceDisablePreintegratedGF=False,bDisableMaterialNormalCalculation=False,MobileShadowQuality=PCF_2x2)
+
+[ForwardShadingQuality_SF_VULKAN_SM5_ANDROID ShaderPlatformQualitySettings]
+QualityOverrides[0]=(bDiscardQualityDuringCook=False,bEnableOverride=False,bForceFullyRough=False,bForceNonMetal=False,bForceDisableLMDirectionality=False,bForceLQReflections=False,bForceDisablePreintegratedGF=False,bDisableMaterialNormalCalculation=False,MobileShadowQuality=PCF_2x2)
+QualityOverrides[1]=(bDiscardQualityDuringCook=False,bEnableOverride=True,bForceFullyRough=False,bForceNonMetal=False,bForceDisableLMDirectionality=False,bForceLQReflections=False,bForceDisablePreintegratedGF=False,bDisableMaterialNormalCalculation=False,MobileShadowQuality=PCF_2x2)
+QualityOverrides[2]=(bDiscardQualityDuringCook=True,bEnableOverride=True,bForceFullyRough=True,bForceNonMetal=True,bForceDisableLMDirectionality=True,bForceLQReflections=True,bForceDisablePreintegratedGF=True,bDisableMaterialNormalCalculation=True,MobileShadowQuality=PCF_2x2)
+QualityOverrides[3]=(bDiscardQualityDuringCook=False,bEnableOverride=False,bForceFullyRough=False,bForceNonMetal=False,bForceDisableLMDirectionality=False,bForceLQReflections=False,bForceDisablePreintegratedGF=False,bDisableMaterialNormalCalculation=False,MobileShadowQuality=PCF_2x2)
 
