renamed map AndroidTest to DeviceTest map, removed unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,10 @@ BCSubsystem**.xcworkspace
 Binaries/
 Build/
 
+# builds for device
+**/BCSubsystem-**
+
+
 # files written by tests
 Artifacts/
 
