executable paths in jenkinsfile

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -176,7 +176,7 @@ PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/EmptyWorld.EmptyWorld
+GameDefaultMap=/Game/AndroidTest.AndroidTest
 EditorStartupMap=/Game/AndroidTest.AndroidTest
 GlobalDefaultGameMode=/Script/FunctionalTesting.FunctionalTestGameMode
 
