--- a/BCSubsystem.uproject
+++ b/BCSubsystem.uproject
@@ -81,6 +81,11 @@
 		{
 			"Name": "RuntimeTests",
 			"Enabled": true
-		}
+		},
+        {
+            "Name": "VaRest",
+            "Enabled": true,
+            "MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/e47be161e7a24e928560290abd5dcc4f"
+        }
 	]
 }
