removing unnecessary android build files and also client device test prints data after authenticate

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,10 @@ BCSubsystem.xcworkspace
 Binaries/
 Build/
 
+# builds for device
+**/BCSubsystem_**
+**/BCClient_**
+
 # files written by tests
 Artifacts/
 
