Using one map for tests and launching, for device test devs can add their own tests as ACTOR that can be spawned.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -46,6 +46,14 @@ r.BasePassOutputsVelocity=False
 r.WireframeCullThreshold=5.000000
 UIScaleRule=ShortestSide
 UIScaleCurve=(EditorCurveData=(Keys=),ExternalCurve=None)
+r.SupportSkyAtmosphereAffectsHeightFog=False
+r.SupportSkyAtmosphere=False
+r.SupportPointLightWholeSceneShadows=False
+r.SupportLowQualityLightmaps=False
+r.SupportStationarySkylight=False
+r.Mobile.EnableStaticAndCSMShadowReceivers=False
+r.Mobile.AllowMovableDirectionalLights=False
+r.Mobile.AllowDistanceFieldShadows=False
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -176,7 +184,7 @@ PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/EmptyWorld.EmptyWorld
+GameDefaultMap=/Game/AndroidTest.AndroidTest
 EditorStartupMap=/Game/AndroidTest.AndroidTest
 GlobalDefaultGameMode=/Script/FunctionalTesting.FunctionalTestGameMode
 
@@ -197,4 +205,7 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/MacTargetPlatform.XcodeProjectSettings]
+CodeSigningPrefix=com.bitheads
 
