--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -46,6 +46,13 @@ r.BasePassOutputsVelocity=False
 r.WireframeCullThreshold=5.000000
 UIScaleRule=ShortestSide
 UIScaleCurve=(EditorCurveData=(Keys=),ExternalCurve=None)
+r.Mobile.EnableStaticAndCSMShadowReceivers=False
+r.Mobile.AllowDistanceFieldShadows=False
+r.Mobile.AllowMovableDirectionalLights=False
+r.SupportStationarySkylight=False
+r.SupportLowQualityLightmaps=False
+r.SupportPointLightWholeSceneShadows=False
+r.SupportSkyAtmosphere=False
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -177,7 +184,7 @@ DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/EmptyWorld.EmptyWorld
-EditorStartupMap=/Game/AndroidTest.AndroidTest
+EditorStartupMap=/Game/EmptyWorld.EmptyWorld
 GlobalDefaultGameMode=/Script/FunctionalTesting.FunctionalTestGameMode
 
 [/Script/VaRest.VaRestSettings]
