Attempting fix for running all tests through command line

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -186,6 +186,7 @@ DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds
 GameDefaultMap=/Game/EmptyWorld.EmptyWorld
 EditorStartupMap=/Game/EmptyWorld.EmptyWorld
 GlobalDefaultGameMode=/Script/FunctionalTesting.FunctionalTestGameMode
+GameInstanceClass=/Game/Tests_GI.Tests_GI_C
 
 [/Script/VaRest.VaRestSettings]
 bExtendedLog=False
