Attempting fix for running all tests through command line

--- a/Config/BrainCloudSettings.ini
+++ b/Config/BrainCloudSettings.ini
@@ -1,8 +1,8 @@
 [Credentials]
-AppId=
-AppSecret=
+AppId=20001
+AppSecret=4e51b45c-030e-4f21-8457-dc53c9a0ed5f
 Version=1.0
-ServerUrl="https://api.braincloudservers.com/dispatcherv2"
+ServerUrl="https://api.internal.braincloudservers.com/dispatcherv2"
 S2SKey=
-S2SUrl="https://api.braincloudservers.com/s2sdispatcher"
+S2SUrl="https://api.internal.braincloudservers.com/s2sdispatcher"
 
