--- a/.gitignore
+++ b/.gitignore
@@ -48,7 +48,18 @@ BCSubsystem**.xcworkspace
 
 # Binary Files
 Binaries/
-Build/
+
+# Don't ignore icon files in Build
+!**/Build/**/*.png
+!**/Build/**/*.icns
+!**/Build/**/PakBlacklist*.txt
+!**/Build/**/*.ico
+**/Build/**/*.log
+**/Build/**/*.properties
+**/Build/**/*.java
+**/Build/**/*.plist
+**/Build/**/*.entitlements
+**/Build/**/*.PackageVersionCounter
 
 # builds for device
 **/BCSubsystem_**
